2007-02-14  Miloslav Trmac  <mitr@redhat.com>

	* makeinfo/makeinfo.c (getdocumenttext): Correctly save and
	restore the current locale configuration.
	bug-texinfo mail of 14 Feb 2007 16:28:37 +0100.

2007-02-11  Karl Berry  <karl@gnu.org>

	* doc/texinfo.txi (HTML Xref Link Basics): manual is metasyntactic.

	* doc/texinfo.txi (documentencoding, documentlanguage):
	mention the UTF-8 is (sort of) supported, and that these commands
	should be given after @setfilename.

	* doc/texinfo.tex (\pdfmkdest): \makevalueexpandable,
	so simple @value in @node names can work.
	Report from Jorge Barros de Abreu, 14 Jan 2007 08:24:57 (+ff).

2007-02-10  gettextize  <bug-gnu-gettext@gnu.org>

	* gnulib/m4/gettext.m4: Upgrade to gettext-0.16.
	* gnulib/m4/lib-link.m4: Upgrade to gettext-0.16.
	* configure.ac (AM_GNU_GETTEXT_VERSION): Bump to 0.16.

2007-02-07  Miloslav Trmac  <mitr@redhat.com>

	* configure.ac: Remove unnecessary wcwidth () test.  Add missing
	setlocale () test.
	* makeinfo/makeinfo.c (string_width): Remove.
	* makeinfo/makeinfo.h (string_width): Remove declaration.

	* makeinfo/cmds.c (cm_center)
	* makeinfo/index.c (insert_index_output_line_no, cm_printindex):
	* makeinfo/makeinfo.c (do_flush_right_indentation)
	* makeinfo/multi.c (output_multitable_row): Use mbswidth () and
	mbsnwidth () instead of string_width ().

2007-01-25  Karl Berry  <karl@gnu.org>

	* makeinfo/float.c (cm_listoffloats): always use the short caption
	in the list of floats if it is provided.  Report from
	Jay Berkenbilt, 19 Jan 2007 11:58:00 -0500.

2007-01-16  Akim Demaille  <akim@epita.fr>

	* util/texi2dvi (insert_commands): Use fatal for errors.
	(insert_commands): Actually, use "error", not "fatal".
	White space changes.

2007-01-16  Akim Demaille  <akim@epita.fr>

	* util/texi2dvi (run_makeinfo): Instead of putting the whole
	function in a "case", return if the language is not texinfo.

2007-01-16  Akim Demaille  <akim@epita.fr>

	* util/texi2dvi: White space changes.
